# gram-code

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  clippy.toml  lychee.toml  rust-toolchain.toml  typos.toml
docs/: vim.md  visual-customization.md  windows.md
docs/development/: debuggers.md  debugging-crashes.md  freebsd.md  glossary.md  linux.md  macos.md  windows.md
docs/extensions/: capabilities.md  debugger-extensions.md  developing-extensions.md  icon-themes.md  installing-extensions.md  languages.md  themes.md
docs/languages/: ansible.md  asciidoc.md  bash.md  biome.md  c.md  cpp.md  csharp.md  css.md  dart.md  deno.md  diff.md  docker.md  elixir.md  elm.md  emmet.md  erlang.md  fish.md  gdscript.md  gleam.md  glsl.md  go.md  groovy.md  haskell.md  helm.md  html.md  java.md  javascript.md  json.md  jsonnet.md  julia.md  kotlin.md  lua.md  luau.md  makefile.md  markdown.md  nim.md  nix.md  ocaml.md  odin.md  opentofu.md  (+26 more)
docs/migrate/: vs-code.md  zed.md
extensions/test-extension/src/: test_extension.rs
script/: build-linux-remote-servers-on-mac  bundle-freebsd  bundle-linux  bundle-mac  bundle-windows.ps1  check-keymaps  check-licenses  check-links  clear-target-dir-if-larger-than.ps1  clippy  clippy.ps1  crate-dep-graph  debug-cli  freebsd  generate-licenses  generate-licenses-csv  generate-licenses.ps1  get-crate-version.ps1  install-linux  install-mold  install-rustup.ps1  install-wild  install.sh  linux  mac-icon-to-car  new-crate  prepare-ci  prettier  prompts  release-mac  reset_db  setup-dev-driver.ps1  uninstall.sh
script/flatpak/: bundle-flatpak  deps
script/lib/: workspace.ps1
script/licenses/: licenses.toml
tooling/perf/: Cargo.toml
tooling/perf/src/: implementation.rs  lib.rs  main.rs
